--- a/views/categories-menu.html
+++ b/views/categories-menu.html
@@ -1,1 +1,1 @@
-			<li><a href="">Categoria Um</a></li>
+<li><a href="/categories/7">Android</a></li><li><a href="/categories/3">Apple</a></li><li><a href="/categories/5">Motorola</a></li><li><a href="/categories/6">Samsung</a></li>
