--- a/views/category.html
+++ b/views/category.html
@@ -14,7 +14,7 @@
     <div class="zigzag-bottom"></div>
     <div class="container">
         <div class="row">
-            {loop}
+            {loop="$products"}
             <div class="col-md-3 col-sm-6">
                 <div class="single-shop-product">
                     <div class="product-upper">
@@ -24,14 +24,16 @@
                     <div class="product-carousel-price">
                         <ins>$899.00</ins> <del>$999.00</del>
                     </div>  
-                    
+
                     <div class="product-option-shop">
                         <a class="add_to_cart_button" data-quantity="1" data-product_sku="" data-product_id="70" rel="nofollow" href="/canvas/shop/?add-to-cart=70">Add to cart</a>
                     </div>                       
                 </div>
             </div>
             {/loop}
-        </div>    
+
+        </div>
+
         <div class="row">
             <div class="col-md-12">
                 <div class="product-pagination text-center">
@@ -58,4 +60,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> 
