--- a/views/admin/categories.html
+++ b/views/admin/categories.html
@@ -1,4 +1,4 @@
-<!-- Content Wrapper. Contains page content -->
+  "<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
 <!-- Content Header (Page header) -->
 <section class="content-header">
@@ -37,6 +37,7 @@
                     <td>{$value.idcategory}</td>
                     <td>{$value.descategory}</td>
                     <td>
+                      <a href="/admin/categories/{$value.idcategory}/products" class="btn btn-default btn-xs"><i class="fa fa-edit"></i> Produtos</a>
                       <a href="/admin/categories/{$value.idcategory}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Editar</a>
                       <a href="/admin/categories/{$value.idcategory}/delete" onclick="return confirm('Deseja realmente excluir este registro?')" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i> Excluir</a>
                     </td>
