--- a/views/cart.html
+++ b/views/cart.html
@@ -9,7 +9,6 @@
         </div>
     </div>
 </div> <!-- End Page title area -->
-
 <div class="single-product-area">
     <div class="zigzag-bottom"></div>
     <div class="container">
@@ -20,10 +19,12 @@
                     <div class="woocommerce">
 
                         <form action="/checkout">
-                            
+
+                            {if="$error != ''"}
                             <div class="alert alert-danger" role="alert">
-                            Error!
+                            {$error}
                             </div>
+                            {/if}
 
                             <table cellspacing="0" class="shop_table cart">
                                 <thead>
@@ -37,24 +38,20 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {loop="$products"}   
+                                    {loop="$products"}
                                     <tr class="cart_item">
                                         <td class="product-remove">
                                             <a title="Remove this item" class="remove" href="/cart/{$value.idproduct}/remove">×</a> 
                                         </td>
-
                                         <td class="product-thumbnail">
                                             <a href="/products/{$value.desurl}"><img width="145" height="145" alt="poster_1_up" class="shop_thumbnail" src="{$value.desphoto}"></a>
                                         </td>
-
                                         <td class="product-name">
                                             <a href="/product/{$value.desurl}">{$value.desproduct}</a> 
                                         </td>
-
                                         <td class="product-price">
                                             <span class="amount">R${function="formatPrice($value.vlprice)"}</span> 
                                         </td>
-
                                         <td class="product-quantity">
                                             <div class="quantity buttons_added">
                                                 <input type="button" class="minus" value="-" onclick="window.location.href = '/cart/{$value.idproduct}/minus'">
@@ -62,61 +59,50 @@
                                                 <input type="button" class="plus" value="+" onclick="window.location.href = '/cart/{$value.idproduct}/add'">
                                             </div>
                                         </td>
-
                                         <td class="product-subtotal">
                                             <span class="amount">R${function="formatPrice($value.vltotal)"}</span> 
                                         </td>
                                     </tr>
-                                    {/loop}   
+                                    {/loop}
                                 </tbody>
                             </table>
-
                             <div class="cart-collaterals">
-
                                 <div class="cross-sells">
-
                                     <h2>Cálculo de Frete</h2>
-                                    
+
                                     <div class="coupon">
                                         <label for="cep">CEP:</label>
-                                        <input type="text" placeholder="00000-000" value="" id="cep" class="input-text" name="zipcode">
+                                        <input type="text" placeholder="00000-000" value="{$cart.deszipcode}" id="cep" class="input-text" name="zipcode">
                                         <input type="submit" formmethod="post" formaction="/cart/freight" value="CÁLCULAR" class="button">
                                     </div>
 
                                 </div>
-
                                 <div class="cart_totals ">
-
                                     <h2>Resumo da Compra</h2>
-
                                     <table cellspacing="0">
                                         <tbody>
                                             <tr class="cart-subtotal">
                                                 <th>Subtotal</th>
-                                                <td><span class="amount">$700.00</span></td>
+                                                <td><span class="amount">R${function="formatPrice($cart.vlsubtotal)"}</span></td>
                                             </tr>
 
                                             <tr class="shipping">
                                                 <th>Frete</th>
-                                                <td>$5.00 <small>prazo de 0 dia(s)</small></td>
+                                                <td>R${function="formatPrice($cart.vlfreight)"}{if="$cart.nrdays > 0"} <small>prazo de {$cart.nrdays} dia(s)</small>{/if}</td>
                                             </tr>
 
                                             <tr class="order-total">
                                                 <th>Total</th>
-                                                <td><strong><span class="amount">$705.00</span></strong> </td>
+                                                <td><strong><span class="amount">R${function="formatPrice($cart.vltotal)"}</span></strong> </td>
                                             </tr>
                                         </tbody>
                                     </table>
                                 </div>
-
                             </div>
-
                             <div class="pull-right">
                                 <input type="submit" value="Finalizar Compra" name="proceed" class="checkout-button button alt wc-forward">
                             </div>
-
                         </form>
-
                     </div>                        
                 </div>                    
             </div>
